--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.wrapper {
+  margin: 0 auto;
+  padding: 8px 8px 24px 8px;
+  max-width: 320px;
+  border: solid 1px #ccc;
+}
+
